<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize"
    tools:context=".fire.presentation.FireFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="h,8:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_item" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_phone"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_person_small"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/receiver_phone_title"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@+id/rv" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/money"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_wallet"
        android:hint="@string/sum_of_money_title"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@+id/phone" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>