<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shopwindow.presentation.ShopWindowFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:id="@+id/content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/card_name_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/cards_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:layout_constraintDimensionRatio="h,8:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_name_shop"
                tools:listitem="@layout/card_item" />

            <TextView
                android:id="@+id/deposit_name_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/deposits_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deposit"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:layout_constraintDimensionRatio="h,8:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deposit_name_shop"
                tools:listitem="@layout/card_item" />

            <TextView
                android:id="@+id/account_name_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/accounts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deposit" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/account"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:layout_constraintDimensionRatio="h,8:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_name_shop"
                tools:listitem="@layout/card_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>